# recruitment

./: .env.example  .gitignore  docker-compose.yml  quality-gate-status.json
.agents/skills/beads/: SKILL.md
.agents/skills/c4flow/: SKILL.md
.agents/skills/code/: SKILL.md
.agents/skills/deploy/: SKILL.md
.agents/skills/design/: SKILL.md
.beads/: metadata.json  push-state.json
.github/workflows/: ci.yml  deploy.yml
backend/: .coverage  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  candidate.py  candidate_profile.py  cv.py  jd_profile.py  job.py  match.py  organization.py  pipeline.py  talent_pool.py  talent_pool_member.py  user.py
backend/app/routers/: candidates.py  health.py  jobs.py  pipelines.py  talent_pools.py  upload.py
backend/app/schemas/: __init__.py  candidate.py  common.py  job.py  match.py  organization.py  talent_pool.py  user.py
backend/app/services/: document_extractor.py  duplicate_detection.py  llm_client.py  match_engine.py  search.py
backend/app/workers/: __init__.py  arq.py
backend/recruitment_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api_layer.py  test_app.py  test_config.py  test_document_extractor.py  test_duplicate_detection.py  test_llm_client.py  test_models.py  test_schemas.py  test_upload.py  test_workers.py
docs/c4flow/: .state.json
frontend/: Dockerfile
nginx/: nginx.conf
scripts/: init-db.sql  test-infra.sh  wait-for.sh
(+25 files in other folders)
