[project]
name = "recruitment-backend"
version = "0.1.0"
description = "AI CV & Recruitment Assistant — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "openai>=1.30.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "pg8000>=1.31.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.2.0",
    "httpx>=0.27.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
